# py-collections

./: .gitignore  README.md  pyproject.toml
examples/: after_example.py  all_example.py  append_example.py  before_example.py  chunk_example.py  collection_map_add_example.py  collection_map_example.py  comprehensive_example.py  dump_me_example.py  edge_cases_example.py  exists_example.py  filter_example.py  first_last_example.py  first_or_raise_example.py  first_with_predicate_example.py  generic_types_example.py  group_by_example.py  init_example.py  iteration_example.py  run_all_examples.py  to_dict_to_json_example.py  typed_collections.py
src/py_collections/: __init__.py  collection.py  collection_map.py
src/py_collections/mixins/: basic_operations.py  grouping.py  math_operations.py  transformation.py  utility.py
tests/: test_after.py  test_all.py  test_append.py  test_before.py  test_chunk.py  test_clone.py  test_collection_map.py  test_dump_me.py  test_edge_cases.py  test_exists.py  test_extend.py  test_filter.py  test_first.py  test_first_or_raise.py  test_generic_types.py  test_group_by.py  test_init.py  test_iteration.py  test_last.py  test_len.py  test_pluck.py  test_remove.py  test_remove_one.py  test_reverse.py  test_str_repr.py
tests/core/: test_edge_cases.py  test_generic_types.py  test_init.py  test_special_methods.py  test_str_repr.py
tests/mixins/element_access/: test_exists.py  test_first_or_raise.py
tests/mixins/math_operations/: test_average.py
tests/mixins/navigation/: test_after.py  test_before.py
tests/mixins/transformation/: test_filter.py
tests/mixins/utility/: test_dump_me.py  test_to_dict_to_json.py
